# assistio-trygghetsalarm

./: .gitignore  FULL_SETUP_GUIDE.md  HEPRO_NETWORK_TROUBLESHOOTING.md  KEYGEN_LICENSING_GUIDE.md  RELEASE_GUIDE.md  TAURI_AUTO_UPDATE_GUIDE.md  index.html  package-lock.json  package.json  release.ps1  vite.config.js
.github/workflows/: release.yml
Trygghetsalarmer_API/: skyresponse_import_alarm_heartbeats.py  skyresponse_import_safety_alarms.py
downloads/: Brukerdetaljer.xlsx  Statushistorikk alarmsender.xlsx
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hepro.rs  lib.rs
src/components/: LicenseActivation.jsx  SafetyAlarmsPage.jsx  SettingsPage.jsx
src/features/: safetyAlarmsModel.js
src/licensing/: keygen.js
src/storage/: jsonStorage.js
