[package]
name = "assistio-trygghetsalarm"
version = "1.0.0"
description = "Frittstående trygghetsalarm-applikasjon"
authors = ["Svein"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Hepro API sync (native Rust implementation)
# native-tls: Uses Windows certificate store (supports Helsenett CA certificates)
# native-tls-alpn: Required for HTTP/2 over TLS
# http2: Required - Skyresponse API uses HTTP/2
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls", "native-tls-alpn", "http2"] }
zip = "2.1"
quick-xml = "0.36"
base64 = "0.22"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
regex = "1.10"
urlencoding = "2.1"
